test/tests/errors/error-for-not-location.sm
// true
// false
// false
/**/
/**/

program {
    const x: int = 0;
    for (x = 1) {}
}